objects/FinancialPromotions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFT__c</fullName>
        <label>CFT</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creditcard_Name__c</fullName>
        <label>Creditcard Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creditcard_Type__c</fullName>
        <label>Creditcard Type Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Plan__c</fullName>
        <label>Installment Plan</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instalments__c</fullName>
        <label>Instalments</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FinancialPromotions</label>
</CustomObject>